--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -76,6 +76,73 @@ jobs:
       #     from: Olu Adeyemo <theoafactor@gmail.com>
       #     body: "New image build: ${{ env.APP_VERSION }}"
 
+
+  Canarydeployment:
+    if: ${{ github.ref_name == 'canary' }}
+    runs-on: ubuntu-latest
+    steps: 
+      - name: "Hello World"
+        run: |
+          echo "--- Greetings Taiwo Abatan ----"
       
+      - name: "Checkout"
+        uses: actions/checkout@v4
+
+      - name: "Create version number"
+        run: |
+          echo "VERSION=${RANDOM}" >> $GITHUB_ENV
+      
+      - name: "Build a Docker image from the repo v1"
+        run:  | 
+          docker build -t abatan/simplewebapp:${{ env.VERSION }} frontend/
+
+      - name: "Log into Docker Hub"
+        uses: docker/login-action@v3
+        with: 
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: "Push to Docker Hub"
+        run: |
+          docker push abatan/simplewebapp:${{ env.VERSION }}
+
+      - name: "Install kubectl"
+        uses: azure/setup-kubectl@v3
+        with: 
+          version: "v1.19.3"
+        id: "install-kubectl"
+
+      - name: "Setup AWS Credentials"
+        uses: aws-actions/configure-aws-credentials@v4
+        with: 
+          aws-region: "us-east-1"
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key:  ${{ secrets.AWS_SECRET_KEY }}
+
+      - name: "Connect to the cluster"
+        run: |
+          aws eks update-kubeconfig --name monday-cluster
+
+
+      - name: "Install Helm"
+        uses: azure/setup-helm@v4.2.0
+        id: "install-helm"
+
+      - name: "Use helm to install our charts"
+        run: |
+          helm upgrade --install bik bik -f bik/values.yaml --set image.tag=${{ env.VERSION}} --set replicaCount=2 --set canaryReplica=2
+
+      - name: "Announce the latest version of the deployment"
+        uses: dawidd6/action-send-mail@v3
+        with:
+          username: taiwoabatan1999@gmail.com
+          password: ${{ secrets.EMAIL_PASSWORD }}
+          server_address: smtp.gmail.com
+          server_port: 465
+          secure: true
+          subject: "New Docker Image Version for Simple Web App - canary Deployment"
+          to: "abatankehinde1999@gmail.com"
+          from: abatan taiwo <taiwoabatan1999@gmail.com>
+          body: "New image build: abatan/simplewebapp:${{ env.VERSION }}"
 
 
