--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -83,7 +83,7 @@ jobs:
     steps: 
       - name: "Hello World"
         run: |
-          echo "--- Greetings Taiwo Abatan ----"
+          echo "--- Greetings Taiwo Abatan Damilare ----"
       
       - name: "Checkout"
         uses: actions/checkout@v4
